# mobility-beliefs-redistribution

./: .gitignore  README.md  paper.bib  paper.tex  pyproject.toml
analysis/: build_dataset.py  regressions.py
output/: tab10_regions.csv  tab1_descriptives.csv  tab2_main_ols.csv  tab3_interactions.csv  tab4_robust_wtp.csv  tab5_weighted_main.csv  tab6_ologit.csv  tab7_joint.csv  tab8_ladder_split.csv  tab9_cohort.csv
